# CaculateCoil

./: CMakeLists.txt  calibrate__.csv  ceresdemo.cpp  file_utils.cpp  generatetestdata.cpp  globalcost.cpp  mag_models.cpp  mag_models.h  settings.h  utils.cpp  utils.h
